Significant merging functionality refactor; centralize/combine DataSet and MultiDataSet merge functionality